tests/unit/guardrails/require-readonly-rootfs/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/kyverno-demo-unsigned:1.0.0
      securityContext:
        readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-securitycontext
spec:
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/kyverno-demo-unsigned:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-writable-rootfs
spec:
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/kyverno-demo-unsigned:1.0.0
      securityContext:
        readOnlyRootFilesystem: false
