tests/unit/guardrails/require-readonly-rootfs/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-readonly-rootfs-test
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-readonly-rootfs
    isValidatingPolicy: true
    kind: Pod
    resources:
      - good-pod
    result: pass
  - policy: require-readonly-rootfs
    isValidatingPolicy: true
    kind: Pod
    resources:
      - bad-pod-no-securitycontext
      - bad-pod-writable-rootfs
    result: fail
